--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,4 +1,10 @@
 {
   "type": "sqlite",
-  "database": "./src/databse/datase.sqlite"
+  "database": "./src/databse/datase.sqlite",
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
